--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,6 +205,7 @@ h2 {
     line-height: var(--text-leading-normal);
     font-weight: var(--text-weight-bold);
     padding: var(--padding-normal) 0;
+    color: var(--text-title-h2) !important;
 }
 
 h3 {
@@ -265,11 +266,9 @@ td a,
 th a,
 h1 a,
 
-.cm-header-2.cm-link,
-h2 a
-{
-    color: var(--text-title-h2) !important;
-}
+
+h2 a,
+
 
 h3 a,
 h4 a,
