--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,8 @@ layout: Stylesheet
     --text-xl: clamp(1.62rem, calc(1.53rem + 0.43vw), 2.22rem);
     --text-xxl: clamp(1.94rem, calc(1.80rem + 0.73vw), 2.96rem);
     --text-jumbo: clamp(2.33rem, calc(2.10rem + 1.15vw), 4rem);
+
+
     --text-weight-bold: 600;
     --text-weight-normal: 400;
     --text-leading-wide: 1.6em;
@@ -1789,3 +1791,14 @@ a[href^="http"] {
 
 
 
+input.task-list-item-checkbox {
+    border: 1px solid var(--task-checkbox);
+    appearance: none;
+    -webkit-appearance: none;
+}
+
+input.task-list-item-checkbox:checked
+{
+    background-color: var(--task-checkbox);
+    box-shadow: inset 0 0 0 2px var(--background-primary);
+}
