--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -54,11 +54,19 @@
     <script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script>
     <link rel="canonical" href="{{site.url}}{{page.url}}" />
     <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/img/profile.png">
-    <link rel="icon" href="{{ site.baseurl }}/assets/img/favicon.png" type="image/png" sizes="16x16" />
+
+    <!-- Small Icon -->
+    <link rel="icon" href="{{ site.baseurl }}/assets/img/La Verdad Continua - Chiquito.svg" type="image/png" sizes="16x16" />
+
+
+    <!-- CSSs -->
     <link href="{{ site.baseurl }}/assets/css/style.css" rel="stylesheet" media="all" class="default" />
     <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet" media="all" class="default" />
     <link href="{{ site.baseurl }}/assets/css/Util.css" rel="stylesheet" media="all" class="default" />
     <link href="{{ site.baseurl }}/assets/css/vendor/Katex.css" rel="stylesheet" media="all" class="default" />
+    <link href="{{ site.baseurl }}/assets/css/S - Embed Adjustments.css" rel="stylesheet" media="all" class="default" />
+    <link href="{{ site.baseurl }}/assets/css/S - Images Adjustments.css" rel="stylesheet" media="all" class="default" />
+
 
     <!--[if IE]>
         <link href="/assets/css/ie-target.css" rel="stylesheet" type="text/css"/>
@@ -110,7 +118,7 @@
                             {%- else -%}
                             <a onclick="window.location.assign('/');">
                             {%- endif -%}
-                                    <h5 class="meta-title"><a>← BACK</a></h5>
+                                    <h5 class="meta-title">← BACK</h5>
                             </a>
                         </div>
                     <!--- List type Note Layout-->
