--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,7 +273,7 @@ h1 {
     line-height: var(--text-leading-narrow);
     font-weight: var(--text-weight-normal);
     padding: var(--padding-normal) 0;
-    color: var(--text-title-h1) !important;
+    color: var(--text-title-h1) ;
 }
 
 h2 {
@@ -281,7 +281,7 @@ h2 {
     line-height: var(--text-leading-normal);
     font-weight: var(--text-weight-bold);
     padding: var(--padding-normal) 0;
-    color: var(--text-title-h2) !important;
+    color: var(--text-title-h2) ;
 }
 
 h3 {
@@ -289,7 +289,7 @@ h3 {
     line-height: var(--text-leading-normal);
     font-weight: var(--text-weight-normal);
     padding: var(--padding-normal) 0;
-    color: var(--text-title-h3) !important;
+    color: var(--text-title-h3) ;
 }
 
 h4 {
@@ -297,7 +297,7 @@ h4 {
     line-height: var(--text-leading-wide);
     font-weight: var(--text-weight-bold);
     padding: var(--padding-thin) 0;
-    color: var(--text-title-h4) !important;
+    color: var(--text-title-h4) ;
 }
 
 h5 {
@@ -305,7 +305,7 @@ h5 {
     line-height: var(--text-leading-wide);
     font-weight: var(--text-weight-normal);
     padding: var(--padding-thin) 0;
-    color: var(--text-title-h5) !important;
+    color: var(--text-title-h5) ;
 }
 
 h6 {
@@ -313,7 +313,7 @@ h6 {
     line-height: var(--text-leading-normal);
     font-weight: var(--text-weight-bold);
     padding: var(--padding-thin) 0;
-    color: var(--text-title-h6) !important;
+    color: var(--text-title-h6) ;
 }
 
 p {
@@ -615,17 +615,22 @@ blockquote p {
     margin: 0 !important;
 }
 
+
+/* Table */
+
 table {
-    border-radius: 5px;
-}
-
-
-/* table {
     border: 1px solid var(--background-secondary) !important;
     border-collapse: collapse;
 }
-  
-th {
+
+/*
+table {
+    border-radius: 5px;
+}*/
+
+
+
+/* th {
     font-weight: 600 !important;
     border: 0px !important;
     text-align: left;
@@ -638,17 +643,7 @@ td {
     border-right: 0px !important;
     border-bottom: 1px solid var(--background-secondary) !important;
 }
-
-tr:nth-child(even){ background-color: var(--table-row-even) }
-tr:nth-child(odd){ background-color: var(--table-row-odd) }
-tr:hover { background-color: var(--table-hover); }
-  
-thead
-{
-    border-bottom: 2px solid var(--background-modifier-border) !important;
-} */
-
-
+*/
 
 th,
 td {
@@ -667,6 +662,31 @@ td a {
     text-decoration: none;
 }
 
+
+/* tr:nth-child(even){ background-color: var(--table-row-even) }
+tr:nth-child(odd){ background-color: var(--table-row-odd) }
+tr:hover { background-color: var(--table-hover); }
+  
+thead
+{
+    border-bottom: 2px solid var(--background-modifier-border) !important;
+} 
+*/  
+
+
+
+
+/* 
+thead tr:nth-child(odd) {
+    background-color: var(--color-bg-main);
+}
+
+tbody tr:nth-child(even) {
+    background-color: var(--color-bg-main);
+} 
+*/
+
+
 table th {
     font-weight: 600;
 }
@@ -675,13 +695,6 @@ tr {
     border-radius: 5px;
 }
 
-thead tr:nth-child(odd) {
-    background-color: var(--color-bg-main);
-}
-
-tbody tr:nth-child(even) {
-    background-color: var(--color-bg-main);
-}
 
 hr {
     background-color: var(--color-border-light);
