--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -33,6 +33,7 @@
     <div class="navbar-brand">
       <a class="navbar-item" style="padding-left: 0;"; href="{{ site.baseurl }}/index.html">
         <img src="../assets/img/Logo - La Verdad Continua.svg" alt="">
+          <h6> La Verdad Continua</h6></a>
           </a>
           <script src="{{ site.baseurl }}/assets/js/modeswitcher.js"></script>  
       <div class="navbar-item navbar-dark-mode__mobile is-hidden-tablet" onclick="modeSwitcher()">
