--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -641,7 +641,7 @@ table {
 
 
 
-/* th {
+th {
     font-weight: 600 !important;
     border: 0px !important;
     text-align: left;
@@ -654,7 +654,8 @@ td {
     border-right: 0px !important;
     border-bottom: 1px solid var(--background-secondary) !important;
 }
-*/
+
+/*
 
 th,
 td {
@@ -672,9 +673,10 @@ td a {
     color: inherit;
     text-decoration: none;
 }
+*/
 
 
-/* tr:nth-child(even){ background-color: var(--table-row-even) }
+tr:nth-child(even){ background-color: var(--table-row-even) }
 tr:nth-child(odd){ background-color: var(--table-row-odd) }
 tr:hover { background-color: var(--table-hover); }
   
@@ -682,12 +684,7 @@ thead
 {
     border-bottom: 2px solid var(--background-modifier-border) !important;
 } 
-*/  
-
-
-
-
-/* 
+  
 thead tr:nth-child(odd) {
     background-color: var(--color-bg-main);
 }
@@ -695,7 +692,9 @@ thead tr:nth-child(odd) {
 tbody tr:nth-child(even) {
     background-color: var(--color-bg-main);
 } 
-*/
+
+
+
 
 
 table th {
