--- a/_includes/Feed.html
+++ b/_includes/Feed.html
@@ -49,9 +49,9 @@
         {%- if note_items.feed == "show" -%}
                 <div class="notelist-feed">
                     <a href="{{ site.baseurl }}{{note_items.url}}">
-                        <h3>{{ note_items.title }}</h3>
+                        <h5>{{ note_items.title }}</h5>
                         <p class="excerpt">
-                            {{ note_items.content | strip | remove: "[[" | remove: "]]" | remove: "-" | escape | truncate: 200 }}
+                            {{ note_items.content | remove: "[[" | remove: "]]" | remove: "-" | escape | truncate: 200 }}
                         </p>
                     </a>
                 </div>
