Feed Title Formatting 2

--- a/assets/css/feed_title.css
+++ b/assets/css/feed_title.css
@@ -3,5 +3,5 @@
     line-height: var(--text-leading-wide);
     font-weight: var(--text-weight-bold);
     padding: var(--padding-thin) 0;
-    color: var(--text-title-h) ;
+    color: var(--text-title-h3) ;
 }
