--- a/_includes/Feed.html
+++ b/_includes/Feed.html
@@ -50,7 +50,7 @@
         {%- if note_items.feed == "show" -%}
                 <div class="notelist-feed">
                     <a href="{{ site.baseurl }}{{note_items.url}}">
-                        <h5>{{ note_items.title }}</h5>
+                        <h5 class="feed-title" >{{ note_items.title }}</h5>
                         <p class="excerpt">
                             {{ note_items.content | remove: "[[" | remove: "]]" | remove: "-" | escape | truncate: 200 }}
                         </p>
