--- a/_includes/Feed.html
+++ b/_includes/Feed.html
@@ -29,7 +29,7 @@
 *
 {%- endcomment -%}
 
-<link href="{{ site.baseurl }}/assets/css/feed_title.css" rel="stylesheet" media="all" class="default" />
+<link href="{{ site.baseurl }}/assets/css/feed.css" rel="stylesheet" media="all" class="default" />
 <!--Notes Feed-->
 <!--Static Page : pages/notes.md-->
 
