--- a/assets/css/feed.css
+++ b/assets/css/feed.css
@@ -5,3 +5,10 @@
     padding: var(--padding-thin) 0;
     color: var(--text-title-h3) ;
 }
+
+
+.excerpt {
+    color: var(--color-text-main) !important;
+    margin: 0;
+    font-size: var(--text-s) !important;
+}
