--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -66,7 +66,7 @@
     <link href="{{ site.baseurl }}/assets/css/S - Embed Adjustments.css" rel="stylesheet" media="all" class="default" />
     <link href="{{ site.baseurl }}/assets/css/S - Images Adjustments.css" rel="stylesheet" media="all"
         class="default" />
-    <link href="{{ site.baseurl }}/assets/css/feed_title.css" rel="stylesheet" media="all" class="default" />
+    <link href="{{ site.baseurl }}/assets/css/feed.css" rel="stylesheet" media="all" class="default" />
  
 
 
