feed.css revision

--- a/assets/css/feed.css
+++ b/assets/css/feed.css
@@ -1,4 +1,4 @@
-.feed-title h5{
+.feed-title{
     font-size: var(--text-h5);
     line-height: var(--text-leading-wide);
     font-weight: var(--text-weight-bold);
