--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -1,6 +1,6 @@
 <div class="home-intro">
-    <h5 class="meta-title">Hola, Soy Lorenzo Cabrera 💀 ⸻</h5>
-    <div class="jumbo">I work on scaling and simplifying design experience. </div>
+    <h5 class="meta-title">Hola, Soy <a href="{{ site.baseurl }}/about" target="_blank">Lorenzo Cabrera</a> 💀 ⸻</h5>
+    <div class="jumbo">Trabajando en la claridad de la información. </div>
     <div class="home-sub-text">
         <h3>
             Currently leading designs at <a href="https://kaleyra.com/" target="_blank">Kaleyra</a>. My <a
