APlicar lo del commit anterior

--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -54,7 +54,7 @@
     <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/img/profile.png">
 
     <!-- Small Icon -->
-    <link rel="icon" href="{{ site.baseurl }}/assets/img/La Verdad Continua - Chiquito.svg" type="image/png"
+    <link rel="icon" href="{{ site.baseurl }}/assets/img/La Verdad Continua - Chiquito.svg" type="svg"
         sizes="16x16" />
 
 
