--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -1,3 +1,13 @@
+<style>
+    a[target= _blank]{
+        background-image: url("https://github.com/gwern/gwern.net/blob/master/img/icons/youtube.svg");
+        background-repeat: no-repeat;
+        background-position: top right;
+        padding-left: 1.5em;
+    }
+</style>
+
+
 <div class="home-intro">
     <h5 class="meta-title">Hola, Soy <a href="{{ site.baseurl }}/about" target="_blank">Lorenzo Cabrera</a> 💀 ⸻</h5>
     <div class="jumbo">Trabajando en la claridad de la información. </div>
@@ -6,7 +16,7 @@
             Currently leading designs at <a href="https://kaleyra.com/" target="_blank">Kaleyra</a>. My <a
                 href="{{ site.baseurl }}/notes">working notes</a> are public, resources are <a
                 href="{{ site.baseurl }}/lists">listed</a>, and I send <a href="https://hiran.substack.com/"
-                target="_blank">this and that</a> to your inbox.
+                target="_blank" icon="" >this and that</a> to your inbox.
         </h3>
     </div>
 </div>
