--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -1,16 +1,16 @@
 <style>
     a[target= _blank]{
         background-image: url("https://github.com/gwern/gwern.net/blob/master/img/icons/youtube.svg");
+        background-color: var(--text-faint);
         background-repeat: no-repeat;
         background-position: top right;
         padding-right: 1.5em;
-        color: var(--text-faint);
     }
 </style>
 
 
 <div class="home-intro">
-    <h5 class="meta-title">Hola, Soy<a href="{{ site.baseurl }}/about" target="_self">Lorenzo Cabrera</a> 💀 ⸻</h5>
+    <h5 class="meta-title">Hola, Soy <a href="{{ site.baseurl }}/about" target="_self">Lorenzo Cabrera</a> 💀 ⸻</h5>
     <div class="jumbo">Trabajando en la claridad de la información. </div>
     <div class="home-sub-text">
         <h3>
