--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -1,6 +1,6 @@
 <style>
     a[target= _blank]{
-        background-image: url("https://github.com/gwern/gwern.net/blob/master/img/icons/youtube.svg");
+        background-image: url("https://raw.githubusercontent.com/gwern/gwern.net/6f3a28fe660997d07f2775d74db8b7359afd8f5d/img/icons/youtube.svg");
         background-color: var(--text-faint);
         background-repeat: no-repeat;
         background-position: top right;
