--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -1,16 +1,7 @@
-<style>
-    a[target= _blank]{
-        background-image: url("https://raw.githubusercontent.com/gwern/gwern.net/6f3a28fe660997d07f2775d74db8b7359afd8f5d/img/icons/youtube.svg");
-        background-color: var(--text-faint);
-        background-repeat: no-repeat;
-        background-position: top right;
-        padding-right: 1.5em;
-    }
-</style>
-
+<link href="{{ site.baseurl }}/assets/css/hyperlinks-icons.css" rel="stylesheet" media="all" class="default" />
 
 <div class="home-intro">
-    <h5 class="meta-title">Hola, Soy <a href="{{ site.baseurl }}/about" target="_self">Lorenzo Cabrera</a> 💀 ⸻</h5>
+    <h5 class="meta-title">Hola, Soy <a href="{{ site.baseurl }}/about" target="_self" type="icon-fill">Lorenzo Cabrera</a> 💀 ⸻</h5>
     <div class="jumbo">Trabajando en la claridad de la información. </div>
     <div class="home-sub-text">
         <h3>
