--- a/assets/css/hyperlinks-icons.css
+++ b/assets/css/hyperlinks-icons.css
@@ -1,6 +1,11 @@
+
+.icon-fill{
+    fill: var(--text-faint);
+}
+
+
 a[target= _blank]{
-    background-image: url("https://github.com/gwern/gwern.net/blob/master/img/icons/youtube.svg");
-    background-color: var(--text-faint);
+    background-image: url("../img/icons/amazon.svg");
     background-repeat: no-repeat;
     background-position: top right;
     padding-right: 1.5em;
