Homepage text color correction

--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -1,10 +1,10 @@
 <link href="{{ site.baseurl }}/assets/css/hyperlinks-icons.css" rel="stylesheet" media="all" class="default" />
 
 <div class="home-intro">
-    <h5 class="meta-title">Hola, Soy <a href="{{ site.baseurl }}/about" target="_self" type="icon-fill">Lorenzo Cabrera</a> 💀 ⸻</h5>
+    <h5 class="meta-title">Hola, Soy <a href="{{ site.baseurl }}/about" target="_self" class="icon-fill">Lorenzo Cabrera</a> 💀 ⸻</h5>
     <div class="jumbo">Trabajando en la claridad de la información. </div>
     <div class="home-sub-text">
-        <h3>
+        <h3 class="colorless-title">
             Currently leading designs at <a href="https://kaleyra.com/" target="_blank">Kaleyra</a>. My <a
                 href="{{ site.baseurl }}/notes">working notes</a> are public, resources are <a
                 href="{{ site.baseurl }}/lists">listed</a>, and I send <a href="https://hiran.substack.com/"
@@ -44,7 +44,7 @@
 </div>
 <div class="home-intro">
     <div class="home-sub-text">
-        <h3>I mentor designers and teams on design, strategy and knowledge management. Book slots via <a
+        <h3 class="colorless-title">I mentor designers and teams on design, strategy and knowledge management. Book slots via <a
                 href="https://adplist.org/mentors/hiran-venugopalan" target="_blank">ADPList</a>, <a
                 href="https://mentorcruise.com/mentor/hiranvenugopalan/" target="_blank">MentorCruise</a>, or Get in
             touch.</h3>
