--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -1,4 +1,5 @@
 <link href="{{ site.baseurl }}/assets/css/hyperlinks-icons.css" rel="stylesheet" media="all" class="default" />
+<link href="{{ site.baseurl }}/assets/css/colorless-title.css" rel="stylesheet" media="all" class="default" />
 
 <div class="home-intro">
     <h5 class="meta-title">Hola, Soy <a href="{{ site.baseurl }}/about" target="_self" class="icon-fill">Lorenzo Cabrera</a> 💀 ⸻</h5>
