--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -30,51 +30,50 @@
 {%- endcomment -%}
 
 <nav class="navbar is-transparent" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <a class="navbar-item" style="padding-left: 0;"; href="{{ site.baseurl }}/index.html">
+  <div class="navbar-brand">
+    <a class="navbar-item" style="padding-left: 0;" ; href="{{ site.baseurl }}/index.html">
+      <img src="../assets/img/Logo - La Verdad Continua.svg" width="30%" alt="">
+    </a>
 
-        <img src="../assets/img/Logo - La Verdad Continua.svg" alt="">
-          <h6> La Verdad Continua</h6></a>
-          </a>
-          <script src="{{ site.baseurl }}/assets/js/modeswitcher.js"></script>  
-      <div class="navbar-item navbar-dark-mode__mobile is-hidden-tablet" onclick="modeSwitcher()">
+    <script src="{{ site.baseurl }}/assets/js/modeswitcher.js"></script>
+    <div class="navbar-item navbar-dark-mode__mobile is-hidden-tablet" onclick="modeSwitcher()">
+      <div class="buttons">
+        <a class="button is-text">
+          <span class="icon is-small">
+            <img src="{{ '/assets/img/sun.svg' | relative_url }}" id="theme-toggle-img--mobile">
+          </span>
+        </a>
+      </div>
+    </div>
+    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
+
+  <div id="navbarBasicExample" class="navbar-menu">
+    <div class="navbar-start">
+      <a href="{{'/notes' | relative_url}}" class="navbar-item">
+        Notes
+      </a>
+      <a href="{{'/lists' | relative_url}}" class="navbar-item">
+        Lists
+      </a>
+      <a href="{{'/about' | relative_url}}" class="navbar-item">
+        About
+      </a>
+    </div>
+    <div class="navbar-end is-hidden-mobile" onclick="modeSwitcher()">
+      <div class="navbar-item">
         <div class="buttons">
           <a class="button is-text">
             <span class="icon is-small">
-              <img src="{{ '/assets/img/sun.svg' | relative_url }}" id="theme-toggle-img--mobile">
+              <img src="{{ '/assets/img/sun.svg' | relative_url }}" id="theme-toggle-img">
             </span>
           </a>
         </div>
       </div>
-      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a>
     </div>
-    
-    <div id="navbarBasicExample" class="navbar-menu">
-      <div class="navbar-start">
-        <a href="{{'/notes' | relative_url}}" class="navbar-item">
-          Notes
-        </a>
-        <a href="{{'/lists' | relative_url}}" class="navbar-item">
-          Lists
-        </a>
-        <a href="{{'/about' | relative_url}}" class="navbar-item">
-          About
-        </a>
-      </div>
-      <div class="navbar-end is-hidden-mobile" onclick="modeSwitcher()" >
-        <div class="navbar-item">
-          <div class="buttons">
-            <a class="button is-text">
-              <span class="icon is-small">
-                <img src="{{ '/assets/img/sun.svg' | relative_url }}" id="theme-toggle-img">
-              </span>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </nav>
+  </div>
+</nav>
