--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -31,7 +31,7 @@
 
 <nav class="navbar is-transparent" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" style="padding-left: 0;" ; href="{{ site.baseurl }}/index.html">
+    <a class="navbar-item" style="padding: 0;" ; href="{{ site.baseurl }}/index.html">
       <img src="../assets/img/Logo - La Verdad Continua.svg" width="30%" alt="">
     </a>
 
