--- a/assets/css/hyperlinks-icons.css
+++ b/assets/css/hyperlinks-icons.css
@@ -14,10 +14,23 @@ a[target= _blank]{
 }
 
 
-
 a[href^="https://www.youtube"] {
     background-image: url("../img/icons/youtube.svg");
     background-repeat: no-repeat;
     background-position: right;
     padding-right: 1.3rem;
 }
+
+
+/* body {
+    background-image: url(happy.svg);
+  }
+
+<svg width="100" height="100" src = "happy.svg" fill="yellow"></svg>
+
+svg{
+    url("../img/icons/youtube.svg")
+    var(--text-faint)
+}
+
+src = "happy.svg" */
