--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -31,8 +31,9 @@
 
 <nav class="navbar is-transparent" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
+
     <a class="navbar-item" style="padding-left: 0;" ; href="{{ site.baseurl }}/index.html">
-      <img src="../assets/img/Logo - La Verdad Continua.svg" width="100%" alt="">
+      <img src="../assets/img/Logo - La Verdad Continua.svg" width="30" width="40" alt="">
     </a>
 
     <script src="{{ site.baseurl }}/assets/js/modeswitcher.js"></script>
